*SVN*

* Added ActiveRecord::Base.find(:last) #11338 [miloops]

* test_native_types expects DateTime.local_offset instead of DateTime.now.offset; fixes test breakage due to dst transition [Geoff Buesing]

* Add :readonly option to HasManyThrough associations. #11156 [miloops]

* Improve performance on :include/:conditions/:limit queries by selectively joining in the pre-query.  #9560 [dasil003]

* Perf fix: Avoid the use of named block arguments.  Closes #11109 [adymo]

* PostgreSQL: support server versions 7.4 through 8.0 and the ruby-pg driver.  #11127 [jdavis]

* Ensure association preloading doesn't break when an association returns nil. ##11145 [GMFlash]

* Make dynamic finders respect the :include on HasManyThrough associations.  #10998. [cpytel]

* Base#instantiate_time_object only uses Time.zone when Base.time_zone_aware_attributes is true; leverages Time#time_with_datetime_fallback for readability [Geoff Buesing]

* Refactor ConnectionAdapters::Column.new_time: leverage DateTime failover behavior of Time#time_with_datetime_fallback [Geoff Buesing]

* Improve associations performance by using symbol callbacks instead of string callbacks. #11108 [adymo]

* Optimise the BigDecimal conversion code.  #11110 [adymo]

* Introduce the :readonly option to all associations. Records from the association cannot be saved.  #11084 [miloops]

* Multiparameter attributes for time columns fail over to DateTime when out of range of Time [Geoff Buesing]

* Base#instantiate_time_object uses Time.zone.local() [Geoff Buesing]

* Add timezone-aware attribute readers and writers. #10982 [Geoff Buesing]

* Instantiating time objects in multiparameter attributes uses Time.zone if available.  #10982 [rick]

* Add note about how ActiveRecord::Observer classes are initialized in a Rails app. #10980 [fxn]

* MySQL: omit text/blob defaults from the schema instead of using an empty string.  #10963 [mdeiters]
